mobile design terminado

--- a/code/src/styles/components/_button.scss
+++ b/code/src/styles/components/_button.scss
@@ -1,3 +1,10 @@
 // -----------------------------------------------------------------------------
 // This file contains all styles related to the button component.
 // -----------------------------------------------------------------------------
+
+@use '../abstracts/mixins' as *;
+@use '../abstracts/variables' as *;
+
+.button{
+    @include button();
+}
