--- a/code/src/styles/abstracts/_mixins.scss
+++ b/code/src/styles/abstracts/_mixins.scss
@@ -1,7 +1,7 @@
 // -----------------------------------------------------------------------------
 // This file contains all application-wide Sass mixins.
 // -----------------------------------------------------------------------------
-
+@use '../abstracts/variables' as *;
 /// Event wrapper
 /// @author Harry Roberts
 /// @param {Bool} $self [false] - Whether or not to include current selector
@@ -31,6 +31,25 @@
 @mixin when-inside($context) {
   #{$context} & {
     @content;
+  }
+}
+
+@mixin button() {
+  display: inline-block;
+  text-align: center;
+  align-content: center;
+  text-decoration: none;
+  background-color: transparent;
+  color: white;
+  text-decoration: underline;
+  text-underline-offset: 10px;
+  text-decoration-color: $brand-color;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 26px;
+  letter-spacing: 2.29px;
+  &:hover {
+    color: $brand-color;
   }
 }
 
