--- a/code/src/styles/base/_typography.scss
+++ b/code/src/styles/base/_typography.scss
@@ -4,6 +4,5 @@
  * Basic typography style for copy text
  */
 body {
-  color: abstracts.$text-color;
-  font: normal 125% / 1.4 abstracts.$text-font-stack;
+  color: white;
 }
