--- a/code/src/styles/abstracts/_mixins.scss
+++ b/code/src/styles/abstracts/_mixins.scss
@@ -33,6 +33,16 @@
     @content;
   }
 }
+@mixin respond-to($breakpoint) {
+  $value: map-get($breakpoints, $breakpoint);
+  @if $value {
+    @media (min-width: $value) {
+      @content;
+    }
+  } @else {
+    @warn "Breakpoint '#{$breakpoint}' no está definido en el mapa.";
+  }
+}
 
 @mixin button() {
   display: inline-block;
