--- a/code/src/styles/layout/_footer.scss
+++ b/code/src/styles/layout/_footer.scss
@@ -2,16 +2,31 @@
 // This file contains all styles related to the footer of the site/application.
 // -----------------------------------------------------------------------------
 @use '../abstracts/variables' as *;
+@use '../abstracts/mixins' as *;
 
 #contact{
-    background-color: $dark-grey;
+    @include respond-to('medium'){
+        padding: 0 162px;
+    }
+    @include respond-to('large'){
+        display: flex;
+        padding: 84px 165px;
+    }
     position: relative;
     .ovalos2 {
         position: absolute;
         bottom: 14%;
+        @include respond-to('medium'){
+            bottom:4%;
+            left: 0;
+        }
     }
     .contact-text{
         text-align: center;
+        @include respond-to('large'){
+            text-align: start;
+            width: 75%;
+        }
     }
 
     h1 {
@@ -20,6 +35,17 @@
         letter-spacing: -1.14px;
         padding: 60px 0 20px 0;
         margin: 0;
+        @include respond-to('medium'){
+            font-size: 72px;
+            line-height: 72px;
+            letter-spacing: -2.05px;
+        }
+        @include respond-to('large'){
+            font-size: 88px;
+            line-height: 88px;
+            letter-spacing: -2.5px;
+            padding-bottom: 36px;
+        }
     }
     p {
         font-weight: 500;
@@ -31,6 +57,15 @@
         margin-left: auto;
         margin-right: auto;
         margin-bottom: 50px;
+        @include respond-to('medium'){
+            font-size: 18px;
+            line-height: 28px;
+            width: 100%;
+        }
+        @include respond-to('large'){
+            width: 70%;
+            margin: 0;
+        }
     }
     .contact-form{
         display: flex;
@@ -77,21 +112,27 @@
             }
 
             .error {
-                float: right;
+                position: absolute;
+                left: 50%;
                 color: #ff3300;
                 font-size: 14px;
                 margin-top: 6px;
                 opacity: 0;
                 transform: translateY(-5px);
                 transition: opacity 0.3s ease, transform 0.3s ease;
+                @include respond-to('medium'){
+                    left: 55%;
+                }
             }
         }
 
         button {
-            width: 50%;
+            padding: 0;
+            padding-right: 16px;
             margin-bottom: 100px;
             float: right;
             border: none;
+            cursor: pointer;
         }
     }
 }
@@ -99,19 +140,57 @@
 footer {
     background-color: $dark-grey;
     text-align: center;
-    h1 {
-        margin: 0;
-        padding-top: 40px;
-        padding-bottom: 20px;
-        font-size: 24px;
-        line-height: 32px;
-        letter-spacing: -0.33px;
+    @include respond-to('medium'){
+        margin-top: 100px;
     }
+    .footer-final{
+        @include respond-to('medium'){
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            padding: 30px 40px;
+        }
+        @include respond-to('large'){
+            padding: 50px 11.5%;
+        }
+        h1 {
+            margin: 0;
+            padding-top: 40px;
+            padding-bottom: 20px;
+            font-size: 24px;
+            line-height: 32px;
+            letter-spacing: -0.33px;
+            @include respond-to('medium'){
+                padding: 0;
+                font-size: 32px;
+                line-height: 32px;
+                letter-spacing: -0.44px;
+            }
+        }
     div.icons {
-        padding-bottom: 60px;
-        min-width: 20px;
-        display: flex;
-        gap: 20px;
-        justify-content: center;
+            padding-bottom: 60px;
+            min-width: 20px;
+            display: flex;
+            gap: 20px;
+            justify-content: center;
+            @include respond-to('medium'){
+                padding: 0;
+                gap: 32px;
+            }
+            a{
+                width: 24px;
+                height: 24px;
+                img{
+                    width: 100%;
+                    height: 100%;
+                }
+            }
+            svg{
+                fill: white;
+                &:hover{
+                    fill: $brand-color;
+                }
+            }
+        }
     }
 }
